--- a/RouteLocalizationMVC.WebSample/RouteLocalizationMVC.WebSample.csproj
+++ b/RouteLocalizationMVC.WebSample/RouteLocalizationMVC.WebSample.csproj
@@ -109,6 +109,9 @@
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SharedController.generated.cs">
+      <DependentUpon>T4MVC.tt</DependentUpon>
+    </Compile>
     <Compile Include="T4MVC.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
