--- a/RouteLocalizationMVC.Nuget/RouteLocalizationMVC.nuspec
+++ b/RouteLocalizationMVC.Nuget/RouteLocalizationMVC.nuspec
@@ -2,12 +2,13 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>RouteLocalizationMVC</id>
-        <version>1.1.1</version>
+        <version>1.2.0</version>
         <authors>Christopher Dresel</authors>
         <projectUrl>https://github.com/Dresel/RouteLocalizationMVC</projectUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>An MVC package that simplifies route localization.</description>
         <language />
+        <tags>MVC, Route, Localization</tags>
     </metadata>
     <files>
         <file src="input\lib\net40\RouteLocalizationMVC.dll" target="lib\net40\RouteLocalizationMVC.dll" />
