--- a/RouteLocalization.Http.Nuget/RouteLocalization.WebApi.nuspec
+++ b/RouteLocalization.Http.Nuget/RouteLocalization.WebApi.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
 	<metadata>
 		<id>RouteLocalization.WebApi</id>
-		<title>RouteLocalization Web API 5.2.0 Alpha</title>
+		<title>RouteLocalization Web API</title>
 		<version>2.0.0-alpha-1</version>
 		<authors>Christopher Dresel</authors>
 		<projectUrl>https://github.com/Dresel/RouteLocalization</projectUrl>
