--- a/RouteLocalization.Http.Nuget/RouteLocalization.WebApi.nuspec
+++ b/RouteLocalization.Http.Nuget/RouteLocalization.WebApi.nuspec
@@ -3,14 +3,14 @@
 	<metadata>
 		<id>RouteLocalization.WebApi</id>
 		<title>RouteLocalization Web API</title>
-		<version>2.0.0-alpha-1</version>
+		<version>2.0.0-alpha-2</version>
 		<authors>Christopher Dresel</authors>
 		<projectUrl>https://github.com/Dresel/RouteLocalization</projectUrl>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
 		<description>An Web API package that simplifies route localization of attribute routes.</description>
 		<language />
 		<dependencies>
-			<dependency id="Microsoft.AspNet.WebApi" version="5.2.0-rc-140516" />
+			<dependency id="Microsoft.AspNet.WebApi" version="5.2.0" />
 		</dependencies>
 		<tags>WebAPI, Route, Localization</tags>
 	</metadata>
