--- a/RouteLocalization.Mvc.Nuget/RouteLocalization.Mvc.nuspec
+++ b/RouteLocalization.Mvc.Nuget/RouteLocalization.Mvc.nuspec
@@ -3,14 +3,14 @@
 	<metadata>
 		<id>RouteLocalization.Mvc</id>
 		<title>RouteLocalization MVC</title>
-		<version>2.0.0-alpha-1</version>
+		<version>2.0.0-alpha-2</version>
 		<authors>Christopher Dresel</authors>
 		<projectUrl>https://github.com/Dresel/RouteLocalization</projectUrl>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
 		<description>An MVC package that simplifies route localization of attribute routes.</description>
 		<language />
 		<dependencies>
-			<dependency id="Microsoft.AspNet.Mvc" version="5.2.0-rc-140516" />
+			<dependency id="Microsoft.AspNet.Mvc" version="5.2.0" />
 		</dependencies>
 		<tags>MVC, Route, Localization</tags>
 	</metadata>
