Fixes Controller Level Attribute Route Check (Mvc), added Controller Level Attribute Routes to the samples

--- a/RouteLocalization.Http.Sample/RouteLocalization.Http.Sample.csproj
+++ b/RouteLocalization.Http.Sample/RouteLocalization.Http.Sample.csproj
@@ -87,6 +87,7 @@
   <ItemGroup>
     <Compile Include="App_Start\DefaultRoutes.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\ControllerLevelAttributeController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\HomeWithRoutePrefixAttributeController.cs" />
     <Compile Include="Global.asax.cs">
