--- a/Source/RouteLocalization.Mvc.Sample/RouteLocalization.Mvc.Sample.csproj
+++ b/Source/RouteLocalization.Mvc.Sample/RouteLocalization.Mvc.Sample.csproj
@@ -44,10 +44,23 @@
     <StyleCopTreatErrorsAsWarnings>False</StyleCopTreatErrorsAsWarnings>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Glimpse.AspNet">
+      <HintPath>..\packages\Glimpse.AspNet.1.9.0\lib\net45\Glimpse.AspNet.dll</HintPath>
+    </Reference>
+    <Reference Include="Glimpse.Core">
+      <HintPath>..\packages\Glimpse.1.8.5\lib\net45\Glimpse.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Glimpse.RouteLocalization.Mvc">
+      <HintPath>..\packages\Glimpse.RouteLocalization.Mvc.1.0.0-alpha-1\lib\net40\Glimpse.RouteLocalization.Mvc.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
+    </Reference>
+    <Reference Include="RouteLocalization.Mvc, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\RouteLocalization.Mvc.2.0.0-alpha-6\lib\net40\RouteLocalization.Mvc.dll</HintPath>
     </Reference>
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Web.DynamicData" />
@@ -182,12 +195,6 @@
     <StyleCopAdditionalAddinPaths Include="..\packages\StyleCopPlus.MSBuild.4.7.49.0\tools">
       <Visible>false</Visible>
     </StyleCopAdditionalAddinPaths>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\RouteLocalization.Mvc\RouteLocalization.Mvc.csproj">
-      <Project>{1b0591b7-de03-49aa-99a3-345b45937ac2}</Project>
-      <Name>RouteLocalization.Mvc</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
