--- a/Source/RouteLocalization.Mvc.Sample/Web.config
+++ b/Source/RouteLocalization.Mvc.Sample/Web.config
@@ -1,9 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
+
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+	<configSections>
+		<section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" />
+	</configSections>
 	<appSettings>
 		<add key="webpages:Version" value="3.0.0.0" />
 		<add key="webpages:Enabled" value="false" />
@@ -13,6 +17,14 @@
 	<system.web>
 		<compilation debug="true" targetFramework="4.5" />
 		<httpRuntime targetFramework="4.5" />
+		<!-- Glimpse: This can be commented in to add additional data to the Trace tab when using WebForms
+		<trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false"/> -->
+		<httpModules>
+			<add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" />
+		</httpModules>
+		<httpHandlers>
+			<add path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" />
+		</httpHandlers>
 	</system.web>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -34,5 +46,20 @@
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
-	
+	<glimpse defaultRuntimePolicy="On" endpointBaseUri="~/Glimpse.axd">
+		<!-- 
+			For more information on how to configure Glimpse, please visit http://getglimpse.com/Help/Configuration
+			or access {your site}/Glimpse.axd for even more details and a Configuration Tool to support you. 
+		-->
+	</glimpse>
+	<system.webServer>
+		<validation validateIntegratedModeConfiguration="false" />
+		<modules>
+			<add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" preCondition="integratedMode" />
+		</modules>
+		<handlers>
+			<add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet"
+				preCondition="integratedMode" />
+		</handlers>
+	</system.webServer>
 </configuration>
