--- a/Source/RouteLocalization.Mvc.Sample/RouteLocalization.Mvc.Sample.csproj
+++ b/Source/RouteLocalization.Mvc.Sample/RouteLocalization.Mvc.Sample.csproj
@@ -57,10 +57,6 @@
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
     </Reference>
-    <Reference Include="RouteLocalization.Mvc, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\RouteLocalization.Mvc.2.0.0-alpha-6\lib\net40\RouteLocalization.Mvc.dll</HintPath>
-    </Reference>
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -197,6 +193,12 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RouteLocalization.Mvc\RouteLocalization.Mvc.csproj">
+      <Project>{1b0591b7-de03-49aa-99a3-345b45937ac2}</Project>
+      <Name>RouteLocalization.Mvc</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
