Added region-independent behavior for GetLocalizedOrDefaultRoute, TryToPreserverBrowserRegionCulture functionality to CultureSensitiveActionFilterAttribute, fixes #38

--- a/.gitignore
+++ b/.gitignore
@@ -97,7 +97,12 @@ publish/
 
 # NuGet Packages Directory
 ## TODO: If you have NuGet Package Restore enabled, uncomment the next line
-#packages/
+packages/
+
+*/*.Nuget/
+
+# MS Fakes
+FakesAssemblies/
 
 # Windows Azure Build Output
 csx
