--- a/Source/RouteLocalization.Http.Tests/packages.config
+++ b/Source/RouteLocalization.Http.Tests/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
-  <package id="StyleCop.MSBuild" version="4.7.49.1" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
+  <package id="StyleCop.MSBuild" version="4.7.55.0" targetFramework="net45" developmentDependency="true" />
   <package id="StyleCopPlus.MSBuild" version="4.7.49.5" targetFramework="net45" />
 </packages>
