--- a/Source/RouteLocalization.Mvc.Sample/packages.config
+++ b/Source/RouteLocalization.Mvc.Sample/packages.config
@@ -8,8 +8,8 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="RouteLocalization.Mvc" version="2.3.0" targetFramework="net45" />
-  <package id="StyleCop.MSBuild" version="4.7.49.1" targetFramework="net45" />
+  <package id="StyleCop.MSBuild" version="4.7.55.0" targetFramework="net45" developmentDependency="true" />
   <package id="StyleCopPlus.MSBuild" version="4.7.49.5" targetFramework="net45" />
-  <package id="T4MVC" version="3.14.1" targetFramework="net45" />
-  <package id="T4MVCExtensions" version="3.14.1" targetFramework="net45" />
+  <package id="T4MVC" version="3.17.5" targetFramework="net45" />
+  <package id="T4MVCExtensions" version="3.17.5" targetFramework="net45" />
 </packages>
