--- a/Source/RouteLocalization.Mvc/packages.config
+++ b/Source/RouteLocalization.Mvc/packages.config
@@ -4,6 +4,6 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package id="StyleCop.MSBuild" version="4.7.49.1" targetFramework="net45" />
+  <package id="StyleCop.MSBuild" version="4.7.55.0" targetFramework="net45" developmentDependency="true" />
   <package id="StyleCopPlus.MSBuild" version="4.7.49.5" targetFramework="net45" />
 </packages>
